fix: fix overflow style #INFR-5854

--- a/packages/gantt/src/gantt.component.scss
+++ b/packages/gantt/src/gantt.component.scss
@@ -54,7 +54,9 @@
     bottom: 0;
     left: 0;
     right: 0;
+    // 兼容火狐浏览器
     overflow: auto;
+    overflow: overlay;
     background-color: variables.$gantt-container-background-color;
 
     .gantt-main-groups,
